# red-request

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  install.sh  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  uninstall.sh
.changeset/: config.json  first-patch.md
.github/: dependabot.yml
.github/workflows/: changesets.yml  ci.yml  red-release.yml  release-fast.yml  release.yml
.husky/: pre-commit
.red/: .gitignore  CONTEXT.md  config.yaml
.red/adr/: 0001-recker-runs-in-a-bun-sidecar.md  0002-stdio-ndjson-transport.md  0003-yaml-collections-plus-importers.md  0004-secrets-in-keychain-yaml-references-only.md  0005-white-label-via-single-brand-config.md  0006-reddb-embedded-persistence-yaml-export.md  0007-secrets-encrypted-in-rdb-master-key-in-keychain.md  0008-remote-project-sources-and-sync.md  0009-scope-cascade-precedence.md  0010-token-request-auth.md
.red/agents/: triage-labels.md
.red/hooks/pre_merge/: red-rust-fmt.sh
apps/desktop/: package.json
apps/desktop/e2e/: README.md  tsconfig.json  wdio.conf.ts
apps/desktop/e2e/specs/: history.e2e.ts  smoke.e2e.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
brand/: brand.config.json  brand.schema.json
scripts/: brand-icons.mjs  build-engine.mjs  changesets-tag-release.sh  check-appimage-reddb-sidecar.mjs  check-reddb-release-assets.mjs  check-versions.mjs  fetch-reddb.mjs  generate-release-notes.mjs  perf-build.mjs  reddb-migration-demo.mjs  rr  set-version.mjs  sync-brand.mjs  sync-desktop-version.mjs  sync-reddb.mjs
