[package]
name = "red-request"
version = "0.9.0"
description = "Open-source white-label API client (recker-powered)"
authors = ["RedDB.io"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "red_request_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# reddb CRUD is routed through Rust (reqwest) rather than webview fetch — avoids the
# WebKit mixed-content block AND gives us full control over the request framing
# (Content-Length, not chunked, which reddb 0.1.5 needs).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "net",
  "io-util",
  "rt-multi-thread",
  "macros",
  "process",
  "time",
  "sync",
] }
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
] }
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
