[package]
name = "red-request"
version = "0.45.10"
description = "Open-source white-label API client (recker-powered)"
authors = ["RedDB.io"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "red_request_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# Structured app logging → stdout + a rotating file next to the reddb logs
# (~/.red/request/logs/red-request.log). The `log` facade is used everywhere in
# this crate; the plugin also lets the webview funnel JS logs into the same sink.
tauri-plugin-log = "2"
log = "0.4"
# Reap the reddb/engine sidecars on SIGTERM/SIGINT/SIGHUP (kill, logout, Ctrl-C).
# Tauri only reaps on a graceful window close, so without this a signalled exit
# orphans `red server` holding the .rdb's single-writer lock.
ctrlc = { version = "3", features = ["termination"] }
# reddb CRUD is routed through Rust (reqwest) rather than webview fetch — avoids the
# WebKit mixed-content block AND gives us full control over the request framing
# (Content-Length, not chunked, which reddb 0.1.5 needs).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "=0.31.4", default-features = false, features = ["system"] }
tokio = { version = "1", features = [
  "net",
  "io-util",
  "rt-multi-thread",
  "macros",
  "process",
  "time",
  "sync",
] }
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
] }
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"

# SIGTERM the reddb sidecar (not SIGKILL) so it checkpoints the collection
# contracts (declared_model) to disk before exiting — otherwise the KV model is
# lost and the next open hits "model mismatch: expected kv, got table".
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
